# Pascal

./: .gitmodules  CMakeLists.txt  COUNTER1.PAS  CaesarCipher.PAS  DateConverter.pas  DividableByThree.pas  DivideByThree.pas  EvenOrOdd.pas  FahrenheitToCelsius.pas  Falgiri.PAS  Loan.pas  MOSALLAS.PAS  MultplicationTable.pas  README.md  RSA_Algorithm.PAS  SumAndCounter.pas
cmake/: enable_pascal.cmake
